--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: radial-gradient(50% 50% at 50% 50%, #0C0D0E 0%, #151718 73.44%);
+  mix-blend-mode: normal;
+
 }
 
 code {
